Edited Cockpit, Display, SideSelector Components. Also added missing styles

--- a/src/components/Cockpit/cockpit.styles.scss
+++ b/src/components/Cockpit/cockpit.styles.scss
@@ -1,4 +1,6 @@
 .cockpit {
+    display: flex;
+    flex-direction: column;
     background-color: #5B15c5;
     color: #fff;
     min-height: 100vh;
