--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: inherit;
+    line-height: 1;
 }
 
 html{ 
@@ -16,8 +17,44 @@ body {
   font-weight: 700;
 }
 
+/* Default Button */
+.btn--default {
+  width: 100%;
+  color: #fff;
+  text-transform: uppercase;
+  background-color: #FF2983;
+  height: 4.4rem;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 24px;
+  margin: 3.2rem 0;
+  cursor: pointer;
+}
+
+.heading--1 {
+  font-size: 3.2rem;
+}
 
 /* Spaceing */
+.marginY-lg {
+  margin: 3.2rem 0;
+}
+
 :root {
-  --global-wrap: 0 1.6rem;
+  --global-wraper: 0 1.6rem;
+  --header-height: 6.4rem;
+}
+
+
+/* Hide Input Numbers */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
