--- a/src/components/SideSelector/sideSelector.styles.scss
+++ b/src/components/SideSelector/sideSelector.styles.scss
@@ -1,16 +1,20 @@
 .sideSelector {
-    width: 50%;
-
+    display: grid;
+    grid-template-columns: repeat(6, 4rem);
+    grid-column-gap: 1.2rem;
+    justify-content: center;
     &__dice {
         fill: #fff;
         width: 4rem;
         height: 4rem;
-        margin: 2rem;
         cursor: pointer;
+        transition: all .3s;
     }
 
     &__inactive {
         opacity: .1;
     }
+
+    
 }
 
